Fix spacing on form

--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -537,7 +537,7 @@ img.round {
 ---------------------------------------*/
 form {
     margin: 0;
-    padding: $line-height 0;
+    padding-bottom: $line-height;
 }
 
 form label,
